# hbase-rs-gui

./: .gitignore  README.md  package-lock.json  package.json  test.bat
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: hbase_api.rs  hbase_config.rs  mod.rs
src-tauri/src/db/: db_init.rs
src/api/: hbase_api.ts  hbase_config.ts
src/components/: HbaseConfigForm.vue
src/router/: index.ts
src/utils/: sql.ts
src/views/: HbaseNamespaceListView.vue  HbaseNamespaceTableDataListView.vue  HbaseNamespaceTableListView.vue  Home.vue
