[package]
name = "hbase-rs-gui"
version = "0.3.0"
description = "A Tauri App For Hbase GUI"
authors = ["awol2005ex@163.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hbase_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["devtools"] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tauri-plugin-dialog = "2.2.0"
anyhow = "1.0.95"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "sqlx-sqlite", "default", "sqlite"] }
once_cell = "1.20.2"
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }

bytes = "1.9.0"
futures-util = "0.3.31"
futures = "0.3.31"
j4rs = "0.22.0"
log = "0.4.26"
tauri-plugin-log = "2"
[profile.dev]
incremental = true
[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
